[tool.poetry]
name = "Sliya"
version = "0.1.0"
description = ""
authors = ["Liszt21 <1832666492@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
dev = "sliya:run_dev_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
